--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
         };
 
         const batIcons = {
-            bolt: `<path d="M11 7L6 13h5l-1 6 5-6h-5l1-6z" fill="white" stroke="black" stroke-width="0.5"/>`,
-            frame: `<rect x="2" y="7" width="16" height="10" rx="2.5" stroke="currentColor" fill="none" stroke-width="2"/><path d="M20 11c1.5 0 1.5 2 0 2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>`
+            bolt: `<path d="M11.5 7.5L8 12h3.5l-1 4.5 3.5-4.5h-3.5l1-4.5z" fill="white" stroke="rgba(0,0,0,0.5)" stroke-width="0.5"/>`,
+            frame: `<rect x="2" y="7" width="16" height="10" rx="3" stroke="currentColor" fill="none" stroke-width="1.5" opacity="0.6"/><path d="M19 10.5c1 0 1 3 0 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.6"/>`
         };
 
         function save() { localStorage.setItem('prism_ultra_v2', JSON.stringify(state)); }
@@ -551,6 +551,7 @@
             });
             document.getElementById('range-scale').value = state.scale;
             document.getElementById('city-input').value = state.city;
+            updateBattery();
         }
 
         function startBurnShield() {
@@ -611,11 +612,15 @@
                 const updateUI = () => {
                     const level = Math.round(b.level * 100);
                     const isCharging = b.charging;
-                    const fillWidth = (level / 100) * 12.5; // Max inner width is approx 13px
+                    const fillWidth = (level / 100) * 13; 
                     
-                    let svg = `<svg width="32" height="32" viewBox="0 0 24 24" fill="none">`;
+                    let fillColor = state.accent;
+                    if(level <= 20) fillColor = "#ff4444";
+                    if(level === 100) fillColor = "#34C759";
+                    
+                    let svg = `<svg width="34" height="34" viewBox="0 0 24 24" fill="none" style="filter: drop-shadow(0 0 2px rgba(0,0,0,0.5))">`;
                     svg += batIcons.frame;
-                    svg += `<rect x="3.8" y="8.8" width="${fillWidth}" height="6.4" rx="1" fill="currentColor"/>`;
+                    svg += `<rect x="3.5" y="8.5" width="${fillWidth}" height="7" rx="1.5" fill="${fillColor}"/>`;
                     if(isCharging) svg += batIcons.bolt;
                     svg += `</svg>`;
 
