--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         #date { font-size: 1.4rem; text-transform: uppercase; letter-spacing: 8px; opacity: 0.8; font-weight: 300; margin-top: 10px; }
         #weather-widget { gap: 20px; opacity: 0.8; font-size: 2.4rem; font-weight: 200; margin-top: 10px;}
         
-        #battery-widget { font-size: 1.2rem; font-weight: 600; opacity: 0.8; margin-top: 10px; letter-spacing: 4px; display: flex; align-items: center; gap: 12px; }
+        #battery-widget { font-size: 1.2rem; font-weight: 600; opacity: 0.8; margin-top: 10px; letter-spacing: 4px; display: flex; align-items: center; justify-content: center; gap: 8px; }
         .charging-pulse { animation: batteryPulse 2s infinite ease-in-out; }
         @keyframes batteryPulse { 0%, 100% { opacity: 0.5; } 50% { opacity: 1; } }
 
@@ -417,7 +417,7 @@
         };
 
         const batIcons = {
-            bolt: `<path d="M12 7l-3.5 5h3l-1 5 4.5-6.5h-3l1-3.5z" fill="white" stroke="rgba(0,0,0,0.3)" stroke-width="0.3"/>`,
+            bolt: `<path d="M10 7.5l-3 4.5h2.5l-1 4.5 4-6h-2.5l1-3z" fill="white" stroke="rgba(0,0,0,0.3)" stroke-width="0.3"/>`,
             frame: `<rect x="2" y="7" width="16" height="10" rx="3" stroke="currentColor" fill="none" stroke-width="1.5" opacity="0.6"/><path d="M19 10.5c1 0 1 3 0 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.6"/>`
         };
 
@@ -618,7 +618,7 @@
                     if(level <= 20) fillColor = "#ff4444";
                     if(level === 100) fillColor = "#34C759";
                     
-                    let svg = `<svg width="34" height="34" viewBox="0 0 24 24" fill="none" style="filter: drop-shadow(0 0 2px rgba(0,0,0,0.5))">`;
+                    let svg = `<svg width="34" height="24" viewBox="0 0 24 24" fill="none" style="display: block; filter: drop-shadow(0 0 2px rgba(0,0,0,0.5))">`;
                     svg += batIcons.frame;
                     svg += `<rect x="3.5" y="8.5" width="${fillWidth}" height="7" rx="1.5" fill="${fillColor}"/>`;
                     if(isCharging) svg += batIcons.bolt;
